force-app/main/default/objects/Employee_Assignment_Status__c/Employee_Assignment_Status__c.object-meta.xml
<CustomObject>
    <label>Employee Assignment Status</label>
    <nameField>
        <displayFormat>EAS-{0000}</displayFormat>
        <label>Employee Assignment Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Assignment Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>