force-app/main/default/objects/Employee_Assignment_Status__c/fields/Employee_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Employee_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Assignment</label>
    <referenceTo>Employee_Assignment__c</referenceTo>
    <relationshipLabel>Employee Assignment Statuses</relationshipLabel>
    <relationshipName>Employee_Assignment_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>