force-app/main/default/objects/Employee_Assignment_Status__c/fields/Red_Reason__c.field-meta.xml
<CustomField>
    <fullName>Red_Reason__c</fullName>
    <inlineHelpText>Red Reason: Salario, Role (que esta trabajando), Proyecto, otros</inlineHelpText>
    <label>Red Reason</label>
    <type>TextArea</type>
</CustomField>